<resources>
    <string name="app_name">SmarkDemo</string>

    <string name="act_login_title">登 录</string>
    <string name="act_login_btn_login">登 录</string>
    <string name="act_login_hint_userAccount">请输入用户名</string>
    <string name="act_login_hint_userPassword">请输入密码</string>

    <string name="act_chat_title">好友昵称</string>

    <string name="title_msg">消息</string>
    <string name="title_hostedRoom">聊天服务</string>
    <string name="title_chatRoom">聊天室</string>
    <string name="title_friends">联系人</string>

    <string name="dialog_hint_roomName">请输入房间名</string>
    <string name="dialog_hint_roomPw">请输入房间密码</string>
    <string name="dialog_hint_roomForever">永久房间</string>
    <string name="dialog_hint_roomPrivate">私有房间</string>
    <string name="dialog_hint_roomProject">请输入房间主题</string>

</resources>
